# src/api-spec.yaml
@@ -119,23 +119,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                bvn:
-                  type: string
-                  minLength: 11
-                  maxLength: 11
-                pswd:
-                  type: string
-                  minLength: 6
-                  format: password
-                email:
-                  type: string
-                  format: email
-              required:
-                - bvn
-                - pswd
-                - email
+              $ref: '#/components/schemas/AccountRegistrationRequest'
         description: The HTTP request payload containing the data needed to create the new account
     parameters: []
 components:
@@ -287,10 +271,12 @@ components:
           type: string
           minLength: 6
           description: The user's password
+          format: password
         email:
           type: string
           format: email
           description: The user's email address
+          minLength: 8
       required:
         - bvn
         - pswd
